# power-atlas

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  demo_README_full.txt  docker-compose.yml  generate_pdfs.py  pyproject.toml  pytest_out.txt  requirements-dev.txt  requirements.txt  run_test_and_print.py  test_out.txt  test_output.txt  test_report.txt  test_results.txt
_archive/: README.md
backend/: Dockerfile  age_helper.py  main.py  requirements.txt
demo/: README.md  VALIDATION_RUNBOOK.md  cypher_utils.py  extraction_utils.py  llm_utils.py  narrative_extraction.py  provenance_writer.py  reset_demo_db.py  run_demo.py  run_demo_support.py  run_scoped_chunk_reader.py  smoke_test.py  text_utils.py
docs/: cross-dataset-validation-report-v1-v2.md
eval/: README.md
examples/: README.md  app_baseline_consumer.py  backend_api_composed_app.py  backend_api_consumer.py  backend_api_custom_graph_queries.py  backend_api_direct_hooks.py  backend_api_guarded_app.py  backend_api_runtime_probe.py  claim_extraction_diagnostics_report_consumer.py  domain_pack_starter.py  graph_health_diagnostics_consumer.py  graph_health_diagnostics_standalone_consumer.py  market_trade_entity_resolution_consumer.py  market_trade_retrieval_policy_consumer.py  retrieval_policy_consumer.py  shared_mechanics_consumer.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
infra/: init-age.sh
neo4j/: CANDIDATE_VS_AUTHORITATIVE_GRAPH_STRATEGY.md  README.md  local_dev_workflow.md
pipelines/: README.md
scripts/: phase1_verify.sh  sync_vendor_version.py
(+722 files in other folders)
